--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -17,7 +17,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .card {
         margin: 24px;
         padding: 16px;
-
         color: #757575;
         border-radius: 5px;
         background-color: #fff;
@@ -26,26 +25,41 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .circle {
         display: inline-block;
-
         width: 64px;
         height: 64px;
-
         text-align: center;
-
         color: #555;
         border-radius: 50%;
         background: #ddd;
-
         font-size: 30px;
         line-height: 64px;
       }
 
       h1 {
         margin: 16px 0;
-
         color: #212121;
-
         font-size: 22px;
+      }
+
+      paper-button.indigo {
+        background-color: var(--paper-indigo-500);
+        color: white;
+        --paper-button-raised-keyboard-focus: {
+          background-color: var(--paper-pink-a200) !important;
+          color: white !important;
+        };
+      }
+
+      paper-button.indigo:hover {
+        background-color: var(--paper-indigo-400);
+      }
+
+      paper-radio-button {
+        display: block;
+      }
+
+      .margin-left {
+        margin-left: 24px;
       }
     </style>
   </template>
