--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         lazyRegister: true
       };
     </script>
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="src/my-app.html"> <!-- use relative path not /.. -->
     <style>
       body {
         margin: 0;
