--- a/src/my-app.html
+++ b/src/my-app.html
@@ -189,7 +189,7 @@
             e.setAttribute('index', i);
             return {
               index: i,
-              name: getAttribute("name")
+              name: e.getAttribute("name")
             }
           })
         });
