--- a/src/my-app.html
+++ b/src/my-app.html
@@ -18,11 +18,11 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="my-icons.html">
-<link rel="import" href="src/checkbox-group.html">
-<link rel="import" href="src/radio-group.html">
-<link rel="import" href="src/page-response.html">
-<link rel="import" href="src/page-score.html">
-<link rel="import" href="src/page-welcome.html">
+<link rel="import" href="checkbox-group.html">
+<link rel="import" href="radio-group.html">
+<link rel="import" href="page-response.html">
+<link rel="import" href="page-score.html">
+<link rel="import" href="page-welcome.html">
 
 <dom-module id="my-app">
   <template>
