--- a/src/my-app.html
+++ b/src/my-app.html
@@ -100,7 +100,7 @@
     <app-location route="{{route}}" use-hash-as-path></app-location>
     <app-route
         route="{{route}}"
-        pattern="/BenoitClaveau/quizz/:page"
+        pattern=":page"
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
@@ -108,7 +108,7 @@
       <!-- Drawer content -->
       <app-drawer>
         <app-toolbar>Questions</app-toolbar>
-        <iron-selector id="selector" selected="[[route.path]]" attr-for-selected="name" class="drawer-list" role="navigation">
+        <iron-selector id="selector" selected="{{route.path}}" attr-for-selected="name" class="drawer-list" role="navigation">
           <template is="dom-repeat" items="{{pages}}">
             <div name="{{item.name}}"><i>{{item.index}}</i><span>{{item.name}}</span></div>
           </template>
@@ -122,12 +122,12 @@
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <!-- a modifier -->
-            <div main-title>Quizz</div>
+            <div main-title>Quizz {{route.path}}</div>
           </app-toolbar>
         </app-header>
 
         <iron-pages id="pages"
-            selected="[[route.path]]"
+            selected="{{route.path}}"
             attr-for-selected="name"
             role="main">
           
