--- a/src/my-app.html
+++ b/src/my-app.html
@@ -122,7 +122,7 @@
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <!-- a modifier -->
-            <div main-title>Quizz {{route.path}}</div>
+            <div main-title>Quizz:{{route.path}}|{{selected}}</div>
           </app-toolbar>
         </app-header>
 
@@ -131,7 +131,7 @@
             attr-for-selected="name"
             role="main">
           
-          <pages-welcome name="Welcome"
+          <pages-welcome name="welcome"
                          title="Quizz"
                          message="Quelle est votre niveau ?">
           </pages-welcome>
@@ -186,11 +186,12 @@
         '_routeChanged(route.*)'
       ],
       _routeChanged: function(changeRecord) {
-        if (changeRecord.path === 'route' && changeRecord.value.path === "") this.set('route.path', "welcome");
+        if (changeRecord.path === 'route' && changeRecord.value.path === "") 
+          this.set('route.path', "welcome");
       },
       attached: function() {
         this.async(function(){
-          this.pages = this.$.pages.items.filter(function(e) { return e.tagName == "RADIO-GROUP" || e.tagName == "CHECKED-GROUP"; }).map(function(e, i) {
+          this.pages = this.$.pages.items.filter(function(e) { return e.tagName == "RADIO-GROUP" || e.tagName == "CHECKBOX-GROUP"; }).map(function(e, i) {
             e.setAttribute('index', ++i);
             return {
               index: i,
