--- a/src/checkbox-group.html
+++ b/src/checkbox-group.html
@@ -5,6 +5,7 @@
   <template>
     <style include="shared-styles">
       paper-checkbox {
+        padding: 8px;
         --paper-checkbox-checked-color: var(--paper-blue-500);
         --paper-checkbox-checked-ink-color: var(--paper-blue-500);
         --paper-checkbox-unchecked-color: var(--paper-blue-900);
