--- a/src/my-app.html
+++ b/src/my-app.html
@@ -149,7 +149,7 @@
           <checkbox-group name="Q2"
                        question="Quels sont les chapîtres abordés dans le PGCL ?"
                        propositions='[
-                        {"id": "a", "name": "Lu/00027organisation"},
+                        {"id": "a", "name": "L\u0027organisation"},
                         {"id": "b", "name": "Auditer"},
                         {"id": "c", "name": "Historiser"}
                        ]'
