--- a/src/page-welcome.html
+++ b/src/page-welcome.html
@@ -14,7 +14,7 @@
      <p></p>
 
      <div class="layout horizontal flex margin-flex">
-        <paper-button raised class="indigo" on-tap="onNext">commencer</paper-button>
+        <paper-button raised class="indigo" on-tap="onStart">commencer</paper-button>
      </div>
   </template>
 
