--- a/src/my-app.html
+++ b/src/my-app.html
@@ -131,10 +131,10 @@
             attr-for-selected="name"
             role="main">
           
-          <pages-welcome name="welcome"
+          <page-welcome name="welcome"
                          title="Quizz"
                          message="Quelle est votre niveau ?">
-          </pages-welcome>
+          </page-welcome>
 
           <radio-group name="Q1"
                        question="Que veut dire GCL ?"
