title in welcome page

--- a/src/page-welcome.html
+++ b/src/page-welcome.html
@@ -6,9 +6,8 @@
     <style include="shared-styles"></style>
 
     <div class="card">
-      <h1>Bravo !</h1>
-      <p>{{title}}</p>
-      <p>{{message}}</p>
+      <h1>{{title}}</h1>
+      <h2>{{message}}</h2>
     </div>
 
      <p></p>
