--- a/src/my-app.html
+++ b/src/my-app.html
@@ -86,8 +86,12 @@
         margin-left: 11px;
       }
 
+      .drawer-list div i::before {
+        margin-top: -15px;
+      }
+
       .drawer-list div:first-of-type i::before,
-      .drawer-list div:first-of-type i::after {
+      .drawer-list div:last-of-type i::after {
         display: none;
       }
 
