--- a/src/page-response.html
+++ b/src/page-response.html
@@ -24,7 +24,7 @@
 
      <p></p>
 
-     <div class="layout horizontal flex margin-flex">
+     <div class="layout horizontal flex margin-left">
         <paper-button raised class="indigo" on-tap="onRestart">recommencer</paper-button>
      </div>
   </template>
