--- a/src/page-score.html
+++ b/src/page-score.html
@@ -13,7 +13,7 @@
 
      <p></p>
 
-     <div class="layout horizontal flex margin-flex">
+     <div class="layout horizontal flex margin-left">
         <paper-button raised class="indigo" on-tap="onNext">Afficher les résultats</paper-button>
      </div>
   </template>
