--- a/src/my-app.html
+++ b/src/my-app.html
@@ -157,7 +157,7 @@
                         {"id": "b", "name": "Auditer"},
                         {"id": "c", "name": "Historiser"}
                        ]'
-                       response='["a", "b"]',
+                       responses='["a", "b"]',
                        message="Organiser et auditer.">
           </checkbox-group>
 
