add layout class in shared styles

--- a/src/checkbox-group.html
+++ b/src/checkbox-group.html
@@ -61,7 +61,7 @@
         var nodes = Polymer.dom(this.$.list).querySelectorAll("paper-checkbox");
 
         if (!nodes.some(function(e) { return e.checked; })) {
-          this.$modal.open();
+          this.$.modal.open();
           return;
         }
 
