--- a/src/radio-group.html
+++ b/src/radio-group.html
@@ -51,7 +51,7 @@
       },
       onNext: function() {
         if (this.selected == null) {
-          this.$modal.open();
+          this.$.modal.open();
           return;
         }
 
