--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -9,6 +9,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-class.html">
 
 <!-- shared styles for all views -->
 <dom-module id="shared-styles">
