--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -15,6 +15,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- shared styles for all views -->
 <dom-module id="shared-styles">
   <template>
+    <style include="iron-flex"></style>
+    <style include="iron-flex-alignment"></style>
     <style>
       .card {
         margin: 24px;
