--- a/src/my-app.html
+++ b/src/my-app.html
@@ -126,7 +126,7 @@
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <!-- a modifier -->
-            <div main-title>Quizz:{{route.path}}|{{selected}}</div>
+            <div main-title>Quizz</div>
           </app-toolbar>
         </app-header>
 
